--- a/findmypatient_webview/WebContent/index.html
+++ b/findmypatient_webview/WebContent/index.html
@@ -1,18 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-	<title>Patient Find</title>
-	
-	<!-- Bootstrap -->
-	<link href="css/bootstrap.css" rel="stylesheet">
-	<script src="js/bootstrap.js"></script>
-	
-	<!-- Style sheet -->
-	<link href="welcome.css" rel="stylesheet">
+<meta charset="utf-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+<title>Patient Find</title>
+
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<script
+	src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+
+<!-- Bootstrap -->
+<link href="css/bootstrap.css" rel="stylesheet">
+<script src="js/bootstrap.js"></script>
+
+<!-- Style sheet -->
+<link href="generalLayout.css" rel="stylesheet">
 
 </head>
 
@@ -32,6 +36,8 @@
 			<div id="navbar" class="collapse navbar-collapse">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home</a></li>
+					<li><a href="createPatient.html">Add</a></li>
+					<li><a href="#about">List</a></li>
 					<li><a href="#about">Search</a></li>
 					<!-- <li><a href="#contact">Contact</a></li> -->
 				</ul>
@@ -59,19 +65,6 @@
 			</form>
 		</div>
 
-
-		<div class="row">
-			<div class="col-md-4">Some content</div>
-			<div class="col-md-4">Some content</div>
-			<div class="col-md-4">Some content</div>
-		</div>
-
-
-		<div class="row">
-			<div class="col-md-4">.col-md-4</div>
-			<div class="col-md-4">.col-md-4</div>
-			<div class="col-md-4">.col-md-4</div>
-		</div>
 	</div>
 	<!-- /.container -->
 </body>
